--- a/Project/MdEditor/Resources/ru.lproj/Localizable.strings
+++ b/Project/MdEditor/Resources/ru.lproj/Localizable.strings
@@ -6,6 +6,10 @@
   Copyright © 2024 repakuku. All rights reserved.
 */
 
+// MARK: - Error
+
+"WrongPassword" = 
+
 // MARK: - LoginScreen
 
 "LoginScreen.Title" = "Авторизация";
@@ -16,3 +20,8 @@
 // MARK: - TodoListScreen
 
 "TodoListScreen.Title" = "Список задач";
+"TodoListScreen.Section.Completed" = "Завершённые";
+"TodoListScreen.Section.Uncompleted" = "Незавершённые";
+"TodoListScreen.Section.AllTasks" = "Все";
+"TodoListScreen.Section.Important" = "Важные";
+"TodoListScreen.Section.Regular" = "Обычные";
