--- a/Project/Resources/en.lproj/MdEditor.Localizable.strings
+++ b/Project/Resources/en.lproj/MdEditor.Localizable.strings
@@ -22,6 +22,10 @@
 "Login.passwordPlaceholder" = "Password";
 "Login.buttonLogin" = "Login";
 
+// MARK: - MainScreen
+
+"Main.title" = "MdEditor";
+
 // MARK: - TodoListScreen
 
 "TodoList.title" = "Tasks";
