DataBase was added, main screen buttons were created

--- a/Project/Resources/en.lproj/MdEditor.Localizable.strings
+++ b/Project/Resources/en.lproj/MdEditor.Localizable.strings
@@ -25,6 +25,9 @@
 // MARK: - MainScreen
 
 "Main.title" = "MdEditor";
+"Main.buttonNew" = "New";
+"Main.buttonOpen" = "Open";
+"Main.buttonAbout" = "About";
 
 // MARK: - TodoListScreen
 
