working with about screen

--- a/Project/Resources/en.lproj/MdEditor.Localizable.strings
+++ b/Project/Resources/en.lproj/MdEditor.Localizable.strings
@@ -29,6 +29,10 @@
 "Main.buttonOpen" = "Open";
 "Main.buttonAbout" = "About";
 
+// MARK: - AboutScreen
+
+"About.title" = "About";
+
 // MARK: - TodoListScreen
 
 "TodoList.title" = "Tasks";
