working with search and tags screens

--- a/Project/Resources/en.lproj/MdEditor.Localizable.strings
+++ b/Project/Resources/en.lproj/MdEditor.Localizable.strings
@@ -32,6 +32,7 @@
 "MainMenu.newFile" = "New File";
 "MainMenu.openFile" = "Open File";
 "MainMenu.search" = "Search";
+"MainMenu.tags" = "Tags";
 "MainMenu.about" = "About";
 
 // MARK: - TextEditorScreen
